<resources>
    <string name="app_name">Columbus Church</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="section_format">Error: FragmentError0%1$d\nPlease Report this to me@cyriacdomini.com</string>
    <string name="church_name">Syro Malabar Catholic Mission</string>
    <string name="address_label">Address:</string>
    <string name="church_address">Sacred Heart Church\n893 Hamlet St.\nColumbus OH 43201</string>
    <string name="about_app_text">This is the unofficial application for St Mary\'s Syro Malabar Catholic Church, Columbus OH</string>
    <string name="github_logo_desc">GitHub Logo</string>
    <string name="gallery0desc">Gallery 1 banner</string>
    <string name="gallery1desc">Gallery 2 banner</string>
    <string name="gallery2desc">Gallery 3 banner</string>
    <string name="code_github_text">Code On GitHub</string>
    <string name="bibleapikey"></string>
    <string name="bible_copyright_notice">Unless otherwise indicated, all Scripture quotations are from the ESV® Bible (The Holy Bible, English Standard Version®), copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. Used by permission. All rights reserved.</string>
    <string-array name="gallery_0">
        <item>Jubilee 2014 Gallery</item>
        <item>https://farm3.staticflickr.com/2945/15409693545_b75dcba4fc.jpg</item>
        <item>https://farm4.staticflickr.com/3929/15409365592_5e8fc56437.jpg</item>
        <item>https://farm3.staticflickr.com/2946/15223102148_9b25defeda.jpg</item>
        <item>https://farm3.staticflickr.com/2948/15222943099_542182b25d.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15223103288_9184da37d3.jpg</item>
        <item>https://farm4.staticflickr.com/3928/15223028520_dd1825bdb1.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223029000_4eb949122b.jpg</item>
        <item>https://farm3.staticflickr.com/2950/15409369622_de9272cb29.jpg</item>
        <item>https://farm4.staticflickr.com/3929/15222947039_a07b7b1305.jpg</item>
        <item>https://farm4.staticflickr.com/3928/15223175187_b801bbb9d8.jpg</item>
        <item>https://farm3.staticflickr.com/2944/15223175857_007754aff8.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15222948749_9ea92cc1d0.jpg</item>
        <item>https://farm3.staticflickr.com/2947/15386662496_ee26506cd2.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223109318_6c45804862.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15223110018_8b6a013c2d.jpg</item>
        <item>https://farm4.staticflickr.com/3929/15409703155_73b0dcf7bf.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15223111228_a7890ab913.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15223035860_6c128048e3.jpg</item>
        <item>https://farm3.staticflickr.com/2946/15223180717_319895b618.jpg</item>
        <item>https://farm3.staticflickr.com/2945/15223181317_1a3c8aae56.jpg</item>
        <item>https://farm3.staticflickr.com/2944/15406530601_bcd4fd916c.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15223114768_692fb86971.jpg</item>
        <item>https://farm3.staticflickr.com/2950/15222955669_faa3e80a57.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15406532551_2490ef6ef5.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223116568_809037b1ae.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15222957499_da51a89fbb.jpg</item>
        <item>https://farm3.staticflickr.com/2949/15223043170_e8fcf15c0b.jpg</item>
        <item>https://farm3.staticflickr.com/2948/15409383882_035ffd7756.jpg</item>
        <item>https://farm3.staticflickr.com/2942/15223120878_4fafb1c784.jpg</item>
        <item>https://farm4.staticflickr.com/3929/15409714065_2906ede18a.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15409714675_dcc7d53512.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15222963589_c8a8a4b37e.jpg</item>
        <item>https://farm3.staticflickr.com/2942/15409715765_8866c0b21a.jpg</item>
        <item>https://farm3.staticflickr.com/2941/15409716515_23bd37e72f.jpg</item>
        <item>https://farm4.staticflickr.com/3928/15223048550_0f23195b1b.jpg</item>
        <item>https://farm3.staticflickr.com/2948/15409717805_18268f6205.jpg</item>
        <item>https://farm4.staticflickr.com/3929/15409718355_09b60dee52.jpg</item>
        <item>https://farm3.staticflickr.com/2941/15406542731_a2fee1b629.jpg</item>
        <item>https://farm3.staticflickr.com/2944/15223127238_e37c456e9d.jpg</item>
        <item>https://farm3.staticflickr.com/2945/15386681366_cf60d596d6.jpg</item>
        <item>https://farm3.staticflickr.com/2949/15223196387_876a089d59.jpg</item>
        <item>https://farm4.staticflickr.com/3929/15386682676_d51a66fed7.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15223070830_b58f4ed378.jpg</item>
        <item>https://farm4.staticflickr.com/3928/15223215837_963c2ea538.jpg</item>
        <item>https://farm4.staticflickr.com/3929/15223072310_25444294dd.jpg</item>
        <item>https://farm4.staticflickr.com/3929/15409411612_5ed546d13e.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223150018_3b44249268.jpg</item>
        <item>https://farm3.staticflickr.com/2945/15223150728_427fdbbcbf.jpg</item>
        <item>https://farm3.staticflickr.com/2944/15386704886_de086af936.jpg</item>
        <item>https://farm4.staticflickr.com/3928/15409744845_41ed31d4cf.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15409415342_086ee4a8fd.jpg</item>
        <item>https://farm3.staticflickr.com/2941/15222993629_29311881a0.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15223154408_72a7b5bfc2.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15223155098_4452ae60fd.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15386708846_77b0189b89.jpg</item>
        <item>https://farm3.staticflickr.com/2950/15223224147_3b7cdb45db.jpg</item>
        <item>https://farm3.staticflickr.com/2942/15223224677_117e8d7d51.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15386710776_d67c936052.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223225957_3a4d05a74c.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15223081950_4c82eb769e.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223159728_c94bbc8be1.jpg</item>
        <item>https://farm3.staticflickr.com/2943/15406575391_c6b3c48f89.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15223083900_a5c963833a.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223161828_f0f90f3431.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15409424882_75aec4f68f.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15223085960_e28eda9a99.jpg</item>
        <item>https://farm3.staticflickr.com/2947/15409755705_b43272afae.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15406579231_b5c9c5d7ca.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15406579841_a29fcfcd28.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15386718036_31b5e3bac7.jpg</item>
        <item>https://farm3.staticflickr.com/2941/15386718526_ed8322a4d8.jpg</item>
        <item>https://farm3.staticflickr.com/2943/15386719096_212d677692.jpg</item>
        <item>https://farm3.staticflickr.com/2944/15223166528_733e529a11.jpg</item>
        <item>https://farm3.staticflickr.com/2950/15409759445_a4e0caeb0c.jpg</item>
        <item>https://farm3.staticflickr.com/2947/15409429812_01f9e92277.jpg</item>
        <item>https://farm3.staticflickr.com/2941/15406583281_5901966830.jpg</item>
        <item>https://farm4.staticflickr.com/3928/15386721726_bacdfe6fdb.jpg</item>
        <item>https://farm3.staticflickr.com/2943/15386722256_1c3fec1064.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15409431702_c340bde58c.jpg</item>
        <item>https://farm3.staticflickr.com/2946/15223170118_37a0a4da62.jpg</item>
        <item>https://farm3.staticflickr.com/2946/15223238747_9d569c650d.jpg</item>
        <item>https://farm3.staticflickr.com/2948/15442979382_b9f388a1cb.jpg</item>
        <item>https://farm4.staticflickr.com/3935/15443320955_fb0f6085cc.jpg</item>
        <item>https://farm3.staticflickr.com/2948/15256762067_7488359379.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15443322365_10e7239632.jpg</item>
        <item>https://farm3.staticflickr.com/2950/15442982422_9d06bd2c46.jpg</item>
        <item>https://farm6.staticflickr.com/5599/15420251906_2a4d9f9bae.jpg</item>
        <item>https://farm6.staticflickr.com/5597/15256764927_2f329eb983.jpg</item>
        <item>https://farm4.staticflickr.com/3936/15256765677_da3e017b43.jpg</item>
        <item>https://farm4.staticflickr.com/3928/15440148011_b6ae844019.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15442985792_29c409d506.jpg</item>
        <item>https://farm3.staticflickr.com/2948/15420255186_8e9f38e573.jpg</item>
        <item>https://farm4.staticflickr.com/3932/15256768327_a075371ac8.jpg</item>
        <item>https://farm3.staticflickr.com/2948/15223281517_b6215de740.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223282157_bdd53a6916.jpg</item>
        <item>https://farm3.staticflickr.com/2946/15409807545_7418efe061.jpg</item>
        <item>https://farm3.staticflickr.com/2947/15386766566_9e718b23df.jpg</item>
        <item>https://farm3.staticflickr.com/2941/15386767066_21028a20de.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15409809265_e009e5882a.jpg</item>
        <item>https://farm3.staticflickr.com/2948/15223139560_f0338c69f8.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15409810585_5fa99b3113.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223286387_80a7602536.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15409811705_0deaf9bf4c.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223142130_4764ceeea1.jpg</item>
        <item>https://farm4.staticflickr.com/3928/15409481992_b4e13a0d6c.jpg</item>
        <item>https://farm3.staticflickr.com/2942/15386772026_17ebb5d057.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223289747_395ae22ba8.jpg</item>
        <item>https://farm4.staticflickr.com/3931/15223290637_42c4644269.jpg</item>
        <item>https://farm4.staticflickr.com/3927/15409815775_eca143bafc.jpg</item>
        <item>https://farm3.staticflickr.com/2949/15223063729_38d58df912.jpg</item>
        <item>https://farm3.staticflickr.com/2941/15223146930_96597991fe.jpg</item>
        <item>https://farm3.staticflickr.com/2946/15223064899_e58cbb9c99.jpg</item>
        <item>https://farm3.staticflickr.com/2946/15409818175_15c06c4779.jpg</item>
        <item>https://farm4.staticflickr.com/3930/15223066029_b134f0ae3f.jpg</item>
    </string-array>
</resources>