<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.columbuschurch.columbuschurch.MainActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gallery_banners_scrollview"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gallery_banners_scroll_layout"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gallery0"
                android:src="@drawable/gallery0banner"
                android:adjustViewBounds="true"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/gallery0desc" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gallery1"
                android:src="@drawable/gallery1banner"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/gallery1desc" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gallery2"
                android:src="@drawable/gallery2banner"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/gallery2desc" />
        </LinearLayout>
        </ScrollView>
</RelativeLayout>
